# adaptive-panoptic-segmentation-with-cross-scale-attention-fusion

./: .gitignore  PROJECT_SUMMARY.txt  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_panoptic_segmentation_with_cross_scale_attention_fusion/: __init__.py
src/adaptive_panoptic_segmentation_with_cross_scale_attention_fusion/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_panoptic_segmentation_with_cross_scale_attention_fusion/models/: __init__.py  components.py  model.py
src/adaptive_panoptic_segmentation_with_cross_scale_attention_fusion/training/: __init__.py  trainer.py
src/adaptive_panoptic_segmentation_with_cross_scale_attention_fusion/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
